[package]
name = "crabby"
description = "A modern multi-paradigm, versatile, and functional Programming Language with a Python like syntax."
authors = ["Kazooki123 <mgamerdinge146@gmail.com>"]
keywords = ["paradigm", "programming-language", "modern", "interpreter"]
categories = ["command-line-utilities", "development-tools"]
version = "0.1.1"
repository = "https://github.com/crabby-lang/crabby"
edition = "2024"
license = "GPL-3.0-only"
exclude = ["extension/*", "examples/*", "docs/*", "target/*"]
# build = "build.rs"

[[bin]]
name = "crabby"
path = "src/main.rs"

[workspace]
members = ["src/compiler", "src/vm"]

[dependencies]
logos = "0.14.1"
thiserror = "1.0.63"
tokio = { version = "1.0", features = ["full"] }
codespan-reporting = "0.11.1"
clap = { version = "4.5", features = ["derive"] }
libc = { version = "0.2" }
futures = "0.3"
rayon = "1.10.0"
ring = "0.17.8"
rand = "0.9.0-alpha.2"
rust-crypto = "0.2.36"
bindgen = "0.70.0"
serde = "1.0"
ash = "0.38.0"
libloading = "0.8.5"
pest = { version = "2", default-features = false }
pest_derive = { version = "2", default-features = false }
typedef = "0.3"
backtrace-on-stack-overflow = "0.3.0"

# For WASM
wasm-bindgen = "0.2"
wasmer = "6.0"
walrus = "0.23.3"
wit-bindgen = "0.43.0"

[features]
nightly = ["typedef/nightly"]

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"
periphery = "0.1.0"
x86_64 = "0.15"
riscv = "0.14.0"
embedded-hal = "1.0.0"
jemallocator = "0.5.4"

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.43"
